# minecraft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: chunk.glsl  chunk_border.glsl  screen.glsl
include/: app.h  camera.h  common.h  events.h  graphics.h  input.h  window.h
include/graphics/: buffer.h  color.h  graphics.h  renderer.h  shader.h  target.h  texture.h  vertex_array.h
include/world/: block.h  world.h
src/: app.cpp  camera.cpp  imgui.cpp  input.cpp  main.cpp  window.cpp
src/graphics/: buffer.cpp  renderer.cpp  shader.cpp  target.cpp  texture.cpp  vertex_array.cpp
src/world/: block.cpp  chunk.cpp  world.cpp
